# slideshow-generator-awards

./: .gitignore  README.md  main.py  pyproject.toml
