[tool.poetry]
name = "slideshow-generator"
version = "0.1.0"
description = ""
authors = ["mrgallo <daniel.gallo@ycdsbk12.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^9.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
